# mcp-glimmung

./: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  docker-build-check.yml  tests.yml
chart/: Chart.yaml  values.yaml
chart/templates/: auth-delegator.yaml  deployment.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
scripts/: image-fingerprint.sh
src/mcp_glimmung/: auth_exchange.py  auth_verifier.py  browser_inspector.mjs  browser_inspector.py  caller.py  glimmung_client.py  http.py  tank_client.py  tools.py
tests/: conftest.py  test_auth_exchange.py  test_auth_verifier.py  test_browser_inspector.py  test_caller_jwt_middleware.py  test_chart.py  test_glimmung_client.py  test_removed_project_config_sync.py  test_removed_workflow_sync.py  test_retired_test_slot_mcp_tools.py  test_tools.py
