[project]
name = "mcp-glimmung"
version = "0.1.0"
description = "Custom Glimmung MCP server — kube-rbac-proxy fronts auth, pod SA token presented to glimmung."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.18.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "romaine-auth @ git+https://github.com/nelsong6/romaine-auth-py.git@dcc052dea53061c96734024a8cfe113b12b08b79",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required for the romaine-auth git URL dependency.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_glimmung"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_glimmung/browser_inspector.mjs" = "mcp_glimmung/browser_inspector.mjs"

[project.scripts]
mcp-glimmung-http = "mcp_glimmung.http:main"
glimmung-browser-inspect = "mcp_glimmung.browser_inspector:main"
